Added changes for current sonar smells